--- a/index.html
+++ b/index.html
@@ -19,30 +19,40 @@ the development of Perl Modules, using the FTN namespace. </p>
 
 <hr>
 
+<h2>ftnpl Project links</h2> <
 <dl>
-<dt><h2>ftnpl Project links</h2> </dt>
+ <dt>Home Page</dt>
+  <dd><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </dd>
+  <dd>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </dd>
 
-<dd><a href="http://ftnpl.sourceforge.net"> Home </a> page</dd>
+ <dt>Summary Page</dt>
+  <dd><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></dd>
 
-<dd>An<a href="http://ftnpl.sf.net"> alternate </a> way of referenceing the home page</dd>
+ <dt>Project News</dt>
+  <dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
 
-<dd><a href="http://sourceforge.net/projects/ftnpl"> Summary </a> page</dd>
+ <dt>CVS</dt>
+  <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> 
+  <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
 
-<dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
+ <dt>Mailiing Lists</dt>
+  <dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
 
-<dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> (Note:  not yet used)</dd>
+ <dt>FTP</dt>
+  <dd>Anonymous <a href="ftp://ftnpl.sourceforge.net/pub/ftnpl"> FTP</a></dd>
 
-<dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
+ <dt>Contacting...</dt>
+  <dd><a href="contact.html">Contact </a>Information</dd>
 
-<dd>Anonymous <a href="ftp://ftnpl.sourceforge.net/pub/"> FTP</a></dd>
-
-<dd><a href="contact.html">Contact </a>Information</dd>
 </dl>
 
+<h3><a href="ftninfo.html">Fidonet</a> Software and Perl</h3>
 <dl>
-<dt><h3><a href="ftninfo.html">Fidonet</a> Software and Perl</h3></dt>
- <dd>Fidonet related Perl <A href="ftnplsw.html#scrpts">scripts</a></dd>
- <dd>Fidonet related Software <A href="ftnplsw.html#apps"> Applications </a>that can or is already using Perl scripts</dd>
+ <dt>FTN related Perl scripts</dt>
+  <dd>Those hosted here at <A href="ftnplsw.html#scrpts">ftnpl</a></dd>
+  <dd>Links to other Fidonet related Perl <A href="ftnplsw.html#scrptlink">scripts</a></dd>
+ <dt>FTN Related Applications</dt>
+  <dd>Fidonet related Software <A href="ftnplsw.html#apps"> Applications </a>that can or is already using Perl scripts</dd>
 </dl>
 
 <hr width="100%">
