Formated the subsections
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@74 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -19,40 +19,48 @@ the development of Perl Modules, using the FTN namespace. </p>
 
 <hr>
 
-<h2>ftnpl Project links</h2> <
 <dl>
- <dt>Home Page</dt>
-  <dd><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </dd>
-  <dd>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </dd>
+<dt><h2>ftnpl Project links</h2></dt> 
+ <dd>
+  <dl>
+   <dt>Home Page</dt>
+    <dd><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </dd>
+    <dd>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </dd>
 
- <dt>Summary Page</dt>
-  <dd><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></dd>
+   <dt>Summary Page</dt>
+    <dd><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></dd>
 
- <dt>Project News</dt>
-  <dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
+   <dt>Project News</dt>
+    <dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
 
- <dt>CVS</dt>
-  <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> 
-  <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
+   <dt>CVS</dt>
+    <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> 
+    <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
 
- <dt>Mailiing Lists</dt>
-  <dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
+   <dt>Mailiing Lists</dt>
+    <dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
 
- <dt>FTP</dt>
-  <dd>Anonymous <a href="ftp://ftnpl.sourceforge.net/pub/ftnpl"> FTP</a></dd>
+   <dt>FTP</dt>
+    <dd>Anonymous <a href="ftp://ftnpl.sourceforge.net/pub/ftnpl"> FTP</a></dd>
 
- <dt>Contacting...</dt>
-  <dd><a href="contact.html">Contact </a>Information</dd>
+   <dt>Contacting...</dt>
+    <dd><a href="contact.html">Contact </a>Information</dd>
 
+  </dl>
+ </dd>
 </dl>
 
-<h3><a href="ftninfo.html">Fidonet</a> Software and Perl</h3>
 <dl>
- <dt>FTN related Perl scripts</dt>
-  <dd>Those hosted here at <A href="ftnplsw.html#scrpts">ftnpl</a></dd>
-  <dd>Links to other Fidonet related Perl <A href="ftnplsw.html#scrptlink">scripts</a></dd>
- <dt>FTN Related Applications</dt>
-  <dd>Fidonet related Software <A href="ftnplsw.html#apps"> Applications </a>that can or is already using Perl scripts</dd>
+ <dt><h2><a href="ftninfo.html">Fidonet</a> Software and Perl</h2><dt>
+  <dd>
+   <dl>
+    <dt>FTN related Perl scripts</dt> 
+     <dd>Those hosted here at <A href="ftnplsw.html#scrpts">ftnpl</a></dd>
+     <dd>Links to other Fidonet related Perl <A href="ftnplsw.html#ftnpllinks">scripts</a></dd>
+    <dt>FTN Related Applications</dt> 
+     <dd>Fidonet related Software <A href="ftnplsw.html#apps"> Applications </a>that could or are already using Perl scripts</dd>
+   </dl>
+  </dd>
 </dl>
 
 <hr width="100%">
