--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -12,7 +12,8 @@
 
 <p>
 <ul>
-  <li>Fidonet related perl <A href="#scrpts"> scripts</A>, etc.
+  <li>Fidonet related Perl <A href="#scrpts"> scripts </A> hosted here at ftnpl.sf.net.
+  <li>Fidonet related Perl <A href="#ftnpllinks"> Links</A>, etc.
   <li>Fidonet related <A href="#apps">Applications </A> that can or do use Perl.
 </ul>
 </p>
@@ -26,6 +27,7 @@
   <dd>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)
 
   <dt>Packet</dt>
+  <dd>pkt2txt - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages
   <dd>ftnplpkt - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)
 
   <dt>Tick</dt>
@@ -37,6 +39,18 @@
   <dt>BBS</dt>
   <dd>bbsdbpl - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  
   
+  <dt>BBBS</dt>
+  <dd>mrtgbbbs - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.
+  <dd>descadd - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.
+
+</dl>
+
+<h3><a name="ftnpllinks">Fidonet related Perl Links<a></h3>
+<dl>
+ <dt>The vented spleen BBS</dt>
+   <dd>Dos/Windows and Fidonet related Perl files</dd>
+   <dd>Freq'able at Fidonet 1:249/139</dd>
+
 </dl>
 
 <hr>
