Commented out project links that don't seem to be working correctly
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@106 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -34,15 +34,29 @@ the development of Perl Modules, using the FTN namespace. </p>
     <dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
 
    <dt>CVS</dt>
-    <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> 
-    <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
 
-   <dt>Mailiing Lists</dt>
+    <dd>Project CVS </a> 
+    <dd>Browse the Project CVS </dd> 
+
+<!--   These links aren't working properly...  8/26/01 - rjc
+    <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> </dd>
+    <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
+-->
+
+   <dt>Mailing Lists</dt>
+    <dd>ftnpl-user</dd>
+    <dd>ftnpl-develop</dd>
+    <dd>ftnpl-announce</dd>
+
+<!--   This link isn't working properly...  8/26/01 - rjc
     <dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
+-->
 
    <dt>FTP</dt>
+    <dd>Anonymous FTP</dd>
+<!--   This link isn't working properly...  8/26/01 - rjc
     <dd>Anonymous <a href="ftp://ftnpl.sourceforge.net/pub/ftnpl"> FTP</a></dd>
-
+-->
    <dt>Contacting...</dt>
     <dd><a href="contact.html">Contact </a>Information</dd>
 
