Added info about two scripts to BBBS section.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@143 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -27,7 +27,7 @@
   <dd>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)
 
   <dt>Packet</dt>
-  <dd>pkt2txt - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages
+  <dd>pkt2txt - pkt2txt.pl - Perl script to read FTN packets & output text or html files for the included messages
   <dd>ftnplpkt - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)
 
   <dt>Tick</dt>
@@ -42,8 +42,12 @@
   <dt>BBBS</dt>
   <dd>mrtgbbbs - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.
   <dd>descadd - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.
+  <dd>indexer - indexer.pl - Perl script to generate web pages for bbbs file directories.
+  <dd>ticmsg - ticmsg.pl - Perl script to sort & organize file lists for posting.
 
 </dl>
+
+<hr width="100%">
 
 <h3><a name="ftnpllinks">Fidonet related Perl Links<a></h3>
 <dl>
@@ -75,6 +79,9 @@ that can use or are already using Perl scripts</p>
 </dl>
 
 
+<hr width="100%">
+<P align="center">
+[<A HREF ="index.html">Home</A>]
 <hr width="100%">
 
   Any comments, suggestions, questions, etc. about this or
