Added info about the fidonet-on-the-internet.org web site.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@146 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftninfo.html
+++ b/ftninfo.html
@@ -22,12 +22,18 @@ Fidonet is an international amateur network of computer systems, often running p
   <dd>For information about Fidonet itself, you can start by going to<A HREF="http://www.fidonet.org"> http://www.fidonet.org</A>.</dd>
   <dd>For Fidonet News, you can go to<A HREF="http://www.fidonews.org"> http://www.fidonews.org</A>.</dd>
   <dd>For information about Fidonet Technical Standards, you can go to<A HREF="http://www.ftsc.org"> http://www.ftsc.org</A>.</dd>
-  <dd>For information about Fidonet nodelist over time, you can go to<A HREF="http://goodolddaysbbs.etowns.net/fidonet.htm"> http://goodolddaysbbs.etowns.net/fidonet.htm</A>.</dd>
+  <dd>For information about the Fidonet nodelist over time, you can go to<A HREF="http://goodolddaysbbs.etowns.net/fidonet.htm"> http://goodolddaysbbs.etowns.net/fidonet.htm</A>.
+     Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
+     also has that information online.</dd>
 </dl>
 
 
-<UL>Fidonet Echos
-  <LI>For an extensive listing of echos carried on Fidonet or othernets, go to <A HREF="http://www.tlchost.net/echolist/"> http://www.tlchost.net/echolist/.</A>.</LI>
+<h3>Fidonet Echos</h3>
+<UL>
+  <LI>For an extensive listing of the echos carried on Fidonet or othernets, go to <A HREF="http://www.tlchost.net/echolist/"> http://www.tlchost.net/echolist/.</A>.</LI>
+  <li> Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
+     also has that information online.</li>
+
 </UL>
 
 
