--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -22,28 +22,29 @@
 <h3><a name="scrpts">Fidonet related Perl scripts<a></h3>
 <dl>
   <dt>Nodelist</dt>
-  <dd>nl2sql:  nl2sql.pl v1.x   Standalone Perl script for loading the information into a fidonet/FTN nodelist MySQL database.</dd>
-  <dd>nl2db:  nl2db.pl v0.x This version will use the (yet to be developed) FTN::Nodelist module to load the information in an FTN nodelist into a MySQL database.</dd>
-  <dd>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)
+  <dd><b>nl2sql</b>:  nl2sql.pl v1.x   Standalone Perl script for loading the information into a fidonet/FTN nodelist MySQL database.</dd>
+  <dd><b>nl2db</b>:  nl2db.pl v0.x This version will use the (yet to be developed) FTN::Nodelist module to load the information in an FTN nodelist into a MySQL database.</dd>
+  <dd><b>ftnplnl</b> - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)
 
   <dt>Packet</dt>
-  <dd>pkt2txt - pkt2txt.pl - Perl script to read FTN packets & output text or html files for the included messages
-  <dd>ftnplpkt - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)
+  <dd><b>pkt2txt</b> - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages
+  <dd><b>pkt2html</b> - pkt2html.pl - Perl script to read FTN packets & output html files for the included messages
+  <dd><b>ftnplpkt</b> - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)
 
   <dt>Tick</dt>
-  <dd>ftnpltic - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)
+  <dd><b>ftnpltic</b> - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)
 
   <dt>Utilities</dt>
-  <dd>ftnplutl - FTN::Utility - Perl module for miscellanous FTN utility routines.  (to be developed)
+  <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellanous FTN utility routines.  (to be developed)
 
   <dt>BBS</dt>
-  <dd>bbsdbpl - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  
+  <dd><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  
   
   <dt>BBBS</dt>
-  <dd>mrtgbbbs - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.
-  <dd>descadd - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.
-  <dd>indexer - indexer.pl - Perl script to generate web pages for bbbs file directories.
-  <dd>ticmsg - ticmsg.pl - Perl script to sort & organize file lists for posting.
+  <dd><b>mrtgbbbs</b> - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.
+  <dd><b>descadd</b> - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.
+  <dd><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.
+  <dd><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.
 
 </dl>
 
