added link to browseing project cvs.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@186 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@ the development of Perl Modules, using the FTN namespace. </p>
    <dt>CVS</dt>
 
     <dd>Project CVS </a> 
-    <dd>Browse the Project CVS </dd> 
+    <dd><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</a> </dd> 
 
 <!--   These links aren't working properly...  8/26/01 - rjc
     <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> </dd>
-    <dd><a href="http://sourceforge.net/cvs/?groupid=29063">Browse </a>the Project CVS  
 -->
 
    <dt>Mailing Lists</dt>
