Added referece to srif.pl script.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@222 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -34,6 +34,9 @@
   <dt>Tick</dt>
   <dd><b>ftnpltic</b> - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)
 
+  <dt>SRIF</dt>
+  <dd><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.
+  
   <dt>Utilities</dt>
   <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellanous FTN utility routines.  (to be developed)
 
