--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,47 @@
 <html>
 <head>
- <TITLE>How to contact ftnpl.sf.net members</TITLE>
- <META NAME="author" content="Robert James Clay">
- <META NAME="keywords" CONTENT="Contact, Robert James Clay, Robert J. Clay, Email, Fidonet">
- <META NAME="description" CONTENT="Home to contact Robert J. Clay. ">
+ <title>How to contact ftnpl.sf.net members</title>
+ <meta name="author" content="Robert James Clay">
+ <meta name="keywords" CONTENT="Contact, ftnpl, Email, Fidonet">
+ <meta name="description" CONTENT="How to contact ftnpl project members. ">
 </head>
-<BODY>
-<HR>
-<H1 align="center">How to contact ftnpl members</H1>
+<body>
+<h1 align="center">How to contact ftnpl members</h1>
 
-<H2>Contacting <A href="http://sourceforge.net/usrs/jame">Robert James Clay</a></H2>
+<h2>Contacting <a href="http://sourceforge.net/usrs/jame">Robert James Clay</a></h2>
 
-<UL>
- <LI><A href="mailto:jame@users.sourceforge.net"><A> jame@users.sorceforge.net</I></A></LI>
- <LI>If you have access to <A HREF="ftninfo.html"> Fidonet </A>, you could netmail him at 1:120/544.</LI>
- <LI>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</LI>
-</UL>
+<ul>
+ <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sorceforge.net</i></a></li>
+ <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544.</li>
+ <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</li>
+</ul>
 
-<H2>Contacting <A href="http://sourceforge.net/usrs/airneil">Russ Johnson</a></H2>
+<h2>Contacting <a href="http://sourceforge.net/usrs/airneil">Russ Johnson</a></h2>
 
-<UL>
- <LI><A href="mailto:airneil@users.sourceforge.net"><A> airneil@users.sorceforge.net</I></A></LI>
- <LI>If you have access to <A HREF="ftninfo.html"> Fidonet </A>, you could netmail him at 1:105/8.</LI>
- <LI>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</LI>
-</UL>
+<ul>
+ <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sorceforge.net</i></a></li>
+ <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
+ <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
+</ul>
 
-<HR WIDTH="50%">
-<CENTER>[<A HREF ="index.html">Home</A>]</CENTER>
+<hr width="50%">
+<p align="center">[<a href ="index.html">Home</a>]</p>
 
-<HR>
-<FONT SIZE="-2">
- <CENTER>Copyright &copy;2001 Robert J. Clay</CENTER>
-</FONT>
+<hr>
 
-</BODY>
+<table width="100%" border="0">
+<tr><td>
+
+ <a href="http://sourceforge.net">
+ <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+
+ </td><td align="center">
+   <font size="-2">
+Copyright &copy;2001-2002 Robert J. Clay</font>
+ </td></tr>
+</table>
+
+
+</body>
 </html>
