Added 2002 to copyright statement.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@284 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -71,18 +71,24 @@ the development of Perl Modules, using the FTN namespace. </p>
  </dd>
 </dl>
 
-<hr width="100%">
+<hr>
 
-<A href="http://sourceforge.net">
-<img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
- width="88" height="31" border="0" alt="SourceForge Logo"></A>
+<table width="100%">
+ <tr><td>
 
+ <a href="http://sourceforge.net">
+ <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+
+ </td><td>
   Any comments, suggestions, questions, etc. about this or
    any other page at this site; please feel free to <a href=
    "contact.html">contact</a> one of us.
+ </td></tr)
+</table>
 
 <p align="center">
- <font size="-2">Copyright &copy;2001 Robert J. Clay</font>
+ <font size="-2">Copyright &copy;2001-2002 Robert J. Clay</font>
 </p>
 
 </body>
