--- a/ftninfo.html
+++ b/ftninfo.html
@@ -48,7 +48,7 @@ of Tom Jennings, tomj@wps.com. </p>
 Any comments, suggestions, questions, etc. about this page; please feel free to <a href="../contact.html"> contact </a>one of us.
 
 <P align="center">
-<font size="-2">Copyright &copy;2001 Robert J. Clay</font>
+<font size="-2">Copyright &copy;2001-2002 Robert J. Clay</font>
 <hr>
 
 </body>
