Added bswift. Updated copyright dates
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@439 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,27 @@
 <body>
 <h1 align="center">How to contact ftnpl members</h1>
 
-<h2>Contacting <a href="http://sourceforge.net/usrs/jame">Robert James Clay</a></h2>
+<h2>Contacting <a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
 
 <ul>
- <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sorceforge.net</i></a></li>
- <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544.</li>
+ <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sourceforge.net</i></a></li>
+ <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544@fidonet.</li>
  <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</li>
 </ul>
 
-<h2>Contacting <a href="http://sourceforge.net/usrs/airneil">Russ Johnson</a></h2>
+<h2>Contacting <a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
 
 <ul>
- <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sorceforge.net</i></a></li>
+ <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sourceforge.net</i></a></li>
  <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
+ <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
+</ul>
+
+<h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
+
+<ul>
+ <li><a href="mailto:airneil@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
+ <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
  <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
 </ul>
 
@@ -37,8 +45,7 @@
   width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
  </td><td align="center">
-   <font size="-2">
-Copyright &copy;2001-2002 Robert J. Clay</font>
+   <font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
  </td></tr>
 </table>
 
