--- a/ftninfo.html
+++ b/ftninfo.html
@@ -45,10 +45,10 @@ of Tom Jennings, tomj@wps.com. </p>
 [<A HREF ="index.html">Home</A>]
 <HR>
 
-Any comments, suggestions, questions, etc. about this page; please feel free to <a href="../contact.html"> contact </a>one of us.
+Any comments, suggestions, questions, etc. about this page; please feel free to <a href="contact.html"> contact </a>one of us.
 
 <P align="center">
-<font size="-2">Copyright &copy;2001-2002 Robert J. Clay</font>
+<font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
 <hr>
 
 </body>
