--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
 
 <ul>
- <li><a href="mailto:airneil@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
+ <li><a href="mailto:bswift@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
  <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
 </ul>
 
