--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -73,7 +73,11 @@ that can use or are already using Perl scripts</p>
 
  <dt>Fidogate (<A href="http://www.fidogate.org"> www.fidogate.org</A>)</dt>
   <dd>This is a Fidonet - Internet gateway application.</dd>
-  <dd>Has an extensive set of perl scripts associated with it.</dd>
+  <dd>Has an extensive set of Perl scripts associated with it.</dd>
+
+ <dt>HPT (<A href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)</dt>
+  <dd>Highly Portable Tosser;  part of the (<A href="http://husky.sourceforge.net"> Husky </A>project.</dd>
+  <dd>Has an extensive set of Perl hooks built into it.</dd>
 
  <dt>BBBS (<A href="http://www.bbbs.net"> www.bbbs.net</A>)</dt>
   <dd>This is a BBS program that is available for many different platforms, 
