--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -38,7 +38,7 @@
   <dd><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.
   
   <dt>Utilities</dt>
-  <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellanous FTN utility routines.  (to be developed)
+  <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellaneous FTN utility routines.  (to be developed)
 
   <dt>BBS</dt>
   <dd><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  
@@ -49,6 +49,9 @@
   <dd><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.
   <dd><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.
 
+  <dt>Maximus</dt>
+  <dd><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)
+  
 </dl>
 
 <hr width="100%">
@@ -66,7 +69,7 @@
 <h3><a name="apps">Fidonet Applications and Perl<a></h3>
 
 <p>The following is a sample listing of Fidonet related Software applications
-that can use or are already using Perl scripts</p>
+that can use or are already using Perl scripts.</p>
 
 
 <dl>
@@ -76,7 +79,7 @@ that can use or are already using Perl scripts</p>
   <dd>Has an extensive set of Perl scripts associated with it.</dd>
 
  <dt>HPT (<A href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)</dt>
-  <dd>Highly Portable Tosser;  part of the (<A href="http://husky.sourceforge.net"> Husky </A>project.</dd>
+  <dd>Highly Portable Tosser;  part of the <A href="http://husky.sourceforge.net"> Husky </A>project.</dd>
   <dd>Has an extensive set of Perl hooks built into it.</dd>
 
  <dt>BBBS (<A href="http://www.bbbs.net"> www.bbbs.net</A>)</dt>
