--- a/ftninfo.html
+++ b/ftninfo.html
@@ -7,15 +7,15 @@
 </head>
 <body BGCOLOR="#FFFFF0" TEXT="#000000" LINK="#0000FF" VLINK="#FF0000" >
 
-<HR>
-
 <H1 align="center">Fidonet Information</H1>
 
 <P align="center">
-Fidonet is an international amateur network of computer systems, often running public access bbs's, and all connected by modem (& often via the internet as well).
+Fidonet is an international amateur network of computer systems,
+ often running public access BBS's, and all connected by modem 
+ and/or via the Internet.
 </P>
 
-<H2> Fidonet links</H2>
+<H2> Fidonet Links</H2>
 
 <dl>
 <dt><h3>Fidonet Information</h3></dt>
