--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -49,6 +49,9 @@
   <dd><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.
   <dd><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.
 
+  <dt>Husky Project</dt>
+  <dd><b>hpt2sql</b> - Perl scripts for using an SQL database with a Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.
+  
   <dt>Maximus</dt>
   <dd><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)
   
