added Maximus www link
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@460 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -52,7 +52,7 @@
   <dt>Husky Project</dt>
   <dd><b>hpt2sql</b> - Perl scripts for using an SQL database with a Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.
   
-  <dt>Maximus</dt>
+  <dt><a href="http://maximus.sourceforge.net">Maximus </a></dt> BBS
   <dd><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)
   
 </dl>
