changed bg color
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@465 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -1,96 +1,92 @@
-<html>
-<head>
- <title>Perl for FTN Systems</title>
- <meta name="author" content="Robert James Clay">
- <meta name="keywords" content="Perl Fidonet FTN BBS">
- <meta http-equiv="KEYWORDS" content="Perl Fidonet FTN BBS">
- <meta name="description" content="Information and links about using Perl with Fidonet systems. ">
-</head>
-<body bgcolor="#FFFFCC" link="#0000FF" vlink="#FF0000">
+<HTML>
+<HEAD>
+ <TITLE>Perl for FTN Systems</TITLE>
+ <META NAME="author" CONTENT="Robert James Clay">
+ <META NAME="keywords" CONTENT="Perl Fidonet FTN BBS">
+ <META http-equiv="KEYWORDS" CONTENT="Perl Fidonet FTN BBS">
+ <META NAME="description" CONTENT="Information and links about using Perl with Fidonet systems. ">
+</HEAD>
+<BODY BGCOLOR="#FFFFF0" LINK="#0000FF" VLINK="#FF0000">
 
-<h1 align="CENTER"><b>Perl for Fidonet (FTN) Systems</a></h1>
+<H1 ALIGN="CENTER">Perl for Fidonet (FTN) Systems</A></H1>
 
-<p> Fidonet is an international amateur network of computer systems, often
+<P> Fidonet is an international amateur network of computer systems, often
  running public access bbs's, and all connected by modem (& often via the
 internet as well).  This site is intended to provide a repository of Perl
 scripts, or links to where such Perl scripts might be found, for use on
 Fidonet Technology Networks (FTN) systems.   A longer term goal is for
-the development of Perl Modules, using the FTN namespace. </p>
+the development of Perl Modules, using the FTN namespace. </P>
 
-<hr>
+<HR>
 
-<dl>
- <dt><h2><a href="ftninfo.html">Fidonet</a> Software and Perl</h2><dt>
-  <dd>
-   <dl>
-    <dt>FTN related Perl scripts</dt> 
-     <dd>Those hosted here at <A href="ftnplsw.html#scrpts">ftnpl</a></dd>
-     <dd>Links to other Fidonet related Perl <A href="ftnplsw.html#ftnpllinks">scripts</a></dd>
-    <dt>FTN Related Applications</dt> 
-     <dd>Fidonet related Software <A href="ftnplsw.html#apps"> Applications </a>that could or are already using Perl scripts</dd>
-   </dl>
-  </dd>
-</dl>
+<DL>
+ <DT><H2><A HREF="ftninfo.html">Fidonet</A> Software and Perl</H2><DT>
+  <DD>
+   <DL>
+    <DT>FTN related Perl scripts</DT> 
+     <DD>Those hosted here at <A HREF="ftnplsw.html#scrpts">ftnpl</A></DD>
+     <DD>Links to other Fidonet related Perl <A HREF="ftnplsw.html#ftnpllinks">scripts</A></DD>
+    <DT>FTN Related Applications</DT> 
+     <DD>Fidonet related Software <A HREF="ftnplsw.html#apps"> Applications </A>that could or are already using Perl scripts</DD>
+   </DL>
+  </DD>
+</DL>
 
-<dl>
-<dt><h2>ftnpl Project links</h2></dt> 
- <dd>
-  <dl>
-   <dt>Home Page</dt>
-    <dd><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </dd>
-    <dd>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </dd>
+<DL>
+<DT><H2>ftnpl Project links</H2></DT> 
+ <DD>
+  <DL>
+   <DT>Home Page</DT>
+    <DD><A HREF="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </A> </DD>
+    <DD>Or <A HREF="http://ftnpl.sf.net"> ftnpl.sf.net </A> </DD>
 
-   <dt>Summary Page</dt>
-    <dd><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></dd>
+   <DT>Summary Page</DT>
+    <DD><A HREF="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </A></DD>
 
-   <dt>Project News</dt>
-    <dd>Project<a href="http://sourceforge.net/news/?groupid=29063"> News </a> </dd>
+   <DT>Project News</DT>
+    <DD>Project<A HREF="http://sourceforge.net/news/?groupid=29063"> News </A> </DD>
 
-   <dt>CVS</dt>
+   <DT>CVS</DT>
 
-    <dd>Project CVS </a> 
-    <dd><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</a> </dd> 
+    <DD>Project CVS </DD> 
+    <DD><A HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</A> </DD> 
 
-<!--   These links aren't working properly...  8/26/01 - rjc
-    <dd>Project<a href="http://sourceforge.net/cvs/?groupid=29063"> CVS </a> </dd>
--->
-
-   <dt>Mailing Lists</dt>
-    <dd>ftnpl-user</dd>
-    <dd>ftnpl-develop</dd>
-    <dd>ftnpl-announce</dd>
+   <DT>Mailing Lists</DT>
+    <DD>ftnpl-user</DD>
+    <DD>ftnpl-develop</DD>
+    <DD>ftnpl-announce</DD>
 
 <!--   This link isn't working properly...  8/26/01 - rjc
-    <dd>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></dd>
+    <DD>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></DD>
 -->
 
-   <dt>Contacting...</dt>
-    <dd><a href="contact.html">Contact </a>Information</dd>
+   <DT>Contacting...</DT>
+    <DD><A HREF="contact.html">Contact </A>Information</DD>
 
-  </dl>
- </dd>
-</dl>
+  </DL>
+ </DD>
+</DL>
 
-<hr>
+<HR>
 
-<table width="100%">
- <tr><td>
+<TABLE WIDTH="100%">
+ <TR><TD>
 
- <a href="http://sourceforge.net">
- <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+ <A HREF="http://sourceforge.net">
+ <IMG SRC="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+  WIDTH="88" HEIGHT="31" BORDER="0" ALT="SourceForge Logo"></A>
 
- </td><td>
+ </TD><TD>
   Any comments, suggestions, questions, etc. about this or
-   any other page at this site; please feel free to <a href=
-   "contact.html">contact</a> one of us.
- </td></tr)
-</table>
+   any other page at this site; please feel free to <A HREF=
+   "contact.html">contact</A> one of us.
+ </TD></TR)
+</TABLE>
 
-<p align="center">
- <font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
-</p>
+<P ALIGN="center">
+ <FONT SIZE="-2">Copyright &COPY;2001-2004 Robert J. Clay</FONT>
+</P>
 
-</body>
-</html>
+</BODY>
+</HTML>
 
