--- a/ftninfo.html
+++ b/ftninfo.html
@@ -1,15 +1,15 @@
-<html>
-<head>
+<HTML>
+<HEAD>
  <TITLE>ftnpl.sourceforge.net:  Fidonet Info</TITLE>
- <META name="author" content="Robert James Clay">
- <META name="keywords" content="Fidonet, FTN, Perl, BBS">
- <META name="description" content="Information and links about Fidonet.">
-</head>
-<body BGCOLOR="#FFFFF0" TEXT="#000000" LINK="#0000FF" VLINK="#FF0000" >
+ <META NAME="author" CONTENT="Robert James Clay">
+ <META NAME="keywords" CONTENT="Fidonet, FTN, Perl, BBS">
+ <META NAME="description" CONTENT="Information and links about Fidonet.">
+</HEAD>
+<BODY BGCOLOR="#FFFFF0" TEXT="#000000" LINK="#0000FF" VLINK="#FF0000" >
 
-<H1 align="center">Fidonet Information</H1>
+<H1 ALIGN="center">Fidonet Information</H1>
 
-<P align="center">
+<P ALIGN="center">
 Fidonet is an international amateur network of computer systems,
  often running public access BBS's, and all connected by modem 
  and/or via the Internet.
@@ -17,39 +17,50 @@ Fidonet is an international amateur network of computer systems,
 
 <H2> Fidonet Links</H2>
 
-<dl>
-<dt><h3>Fidonet Information</h3></dt>
-  <dd>For information about Fidonet itself, you can start by going to<A HREF="http://www.fidonet.org"> http://www.fidonet.org</A>.</dd>
-  <dd>For Fidonet News, you can go to<A HREF="http://www.fidonews.org"> http://www.fidonews.org</A>.</dd>
-  <dd>For information about Fidonet Technical Standards, you can go to<A HREF="http://www.ftsc.org"> http://www.ftsc.org</A>.</dd>
-  <dd>For information about the Fidonet nodelist over time, you can go to<A HREF="http://goodolddaysbbs.etowns.net/fidonet.htm"> http://goodolddaysbbs.etowns.net/fidonet.htm</A>.
+<DL>
+<DT><H3>Fidonet Information</H3></DT>
+  <DD>For information about Fidonet itself, you can start by going to<A HREF="http://www.fidonet.org"> http://www.fidonet.org</A>.</DD>
+  <DD>For Fidonet News, you can go to<a href="http://www.fidonews.org"> http://www.fidonews.org</A>.</DD>
+  <DD>For information about Fidonet Technical Standards, you can go to<A HREF="http://www.ftsc.org"> http://www.ftsc.org</A>.</DD>
+
+<!--  2/2/04 - link not responding
+  <DD>For information about the Fidonet nodelist over time, you can go to<A HREF="http://goodolddaysbbs.etowns.net/fidonet.htm"> http://goodolddaysbbs.etowns.net/fidonet.htm</A>.
      Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
-     also has that information online.</dd>
-</dl>
+     also has that information online.</DD>
+-->
+
+</DL>
 
 
-<h3>Fidonet Echos</h3>
+<H3>Fidonet Echos</H3>
+
 <UL>
-  <LI>For an extensive listing of the echos carried on Fidonet or othernets, go to <A HREF="http://www.tlchost.net/echolist/"> http://www.tlchost.net/echolist/.</A>.</LI>
-  <li> Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
-     also has that information online.</li>
+  <LI>For an extensive listing of the echos carried on Fidonet or othernets, go to <A HREF="http://www.tlchost.net/echolist/"> http://www.tlchost.net/echolist/.</a>.</LI>
+
+<!-- 2/2/04 - link not responding
+  <LI> Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
+     also has that information online.</LI>
+-->
 
 </UL>
 
 
-<p>  &#34;Fido&#34;, &#34;<a href="http://www.fidonet.org">Fidonet</a>&#34;, and the dog-with-diskette are U.S. registered trademarks
-of Tom Jennings, tomj@wps.com. </p>
+<P ALIGN="center">  &#34;Fido&#34;, &#34;<A HREF="http://www.fidonet.org">Fidonet</A>&#34;, and the dog-with-diskette are U.S. registered trademarks
+of Tom Jennings, tomj@wps.com. </P>
 
 
-<P align="center">
+<P ALIGN="center">
 [<A HREF ="index.html">Home</A>]
-<HR>
-
-Any comments, suggestions, questions, etc. about this page; please feel free to <a href="contact.html"> contact </a>one of us.
-
-<P align="center">
-<font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
 <hr>
 
-</body>
-</html>
+
+<P ALIGN="center">
+Any comments, suggestions, questions, etc. about this page; please feel free to <A HREF="contact.html"> contact </A>one of us.
+</P>
+
+<P ALIGN="center">
+<FONT SIZE="-2">Copyright &COPY;2001-2004 Robert J. Clay</FONT>
+</P>
+
+</BODY>
+</HTML>
