corrected tag for News link
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@481 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ the development of Perl Modules, using the FTN namespace. </P>
     <DD><A HREF="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </A></DD>
 
    <DT>Project News</DT>
-    <DD>Project<A HREF="http://sourceforge.net/news/?groupid=29063"> News </A> </DD>
+    <DD>Project<A HREF="http://sourceforge.net/news/?group_id=29063"> News </A> </DD>
 
    <DT>CVS</DT>
 
@@ -84,7 +84,7 @@ the development of Perl Modules, using the FTN namespace. </P>
 </TABLE>
 
 <P ALIGN="center">
- <FONT SIZE="-2">Copyright &COPY;2001-2004 Robert J. Clay</FONT>
+ <FONT SIZE="-2">Copyright &COPY; 2001-2004 Robert J. Clay</FONT>
 </P>
 
 </BODY>
