corrected bgcolor to match other files
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@484 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -6,7 +6,7 @@
  <meta http-equiv="KEYWORDS" content="Perl Fidonet FTN BBS">
  <meta name="description" content="Information and links about using Perl with Fidonet systems. ">
 </head>
-<body bgcolor="#FFFFCC" link="#0000FF" vlink="#FF0000">
+<body bgcolor="#FFFFF0" link="#0000FF" vlink="#FF0000">
 
 <h1 align="CENTER"><a href="ftninfo.html">Fidonet</a>(FTN) related Perl scripts/software</a></h1>
 
