added jamlib link
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@486 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -60,12 +60,18 @@
 <hr width="100%">
 
 <h3><a name="ftnpllinks">Fidonet related Perl Links<a></h3>
+
 <dl>
  <dt>The vented spleen BBS</dt>
    <dd>Dos/Windows and Fidonet related Perl files</dd>
    <dd>Freq'able at Fidonet 1:249/139</dd>
-
 </dl>
+
+<dl>
+ <dt>A Perl::JAM Module, by Johann Billings</dt>
+   <dd><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</dd>
+</dl>
+
 
 <hr>
 
@@ -80,7 +86,7 @@ that can use or are already using Perl scripts.</p>
  <dt>Fidogate (<A href="http://www.fidogate.org"> www.fidogate.org</A>)</dt>
   <dd>This is a Fidonet - Internet gateway application.</dd>
   <dd>Has an extensive set of Perl scripts associated with it.</dd>
-
+  
  <dt>HPT (<A href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)</dt>
   <dd>Highly Portable Tosser;  part of the <A href="http://husky.sourceforge.net"> Husky </A>project.</dd>
   <dd>Has an extensive set of Perl hooks built into it.</dd>
@@ -103,7 +109,7 @@ that can use or are already using Perl scripts.</p>
    "contact.html">contact</a> one of us.
 
 <p align="center">
- <font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
+ <font size="-2">Copyright &copy;2001-2005 Robert J. Clay</font>
 </p>
 
 </body>
