--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -20,40 +20,41 @@
 
 <hr>
 <h3><a name="scrpts">Fidonet related Perl scripts<a></h3>
+
 <dl>
   <dt>Nodelist</dt>
   <dd><b>nl2sql</b>:  nl2sql.pl v1.x   Standalone Perl script for loading the information into a fidonet/FTN nodelist MySQL database.</dd>
   <dd><b>nl2db</b>:  nl2db.pl v0.x This version will use the (yet to be developed) FTN::Nodelist module to load the information in an FTN nodelist into a MySQL database.</dd>
-  <dd><b>ftnplnl</b> - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)
+  <dd><b>ftnplnl</b> - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)</dd>
 
   <dt>Packet</dt>
-  <dd><b>pkt2txt</b> - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages
-  <dd><b>pkt2html</b> - pkt2html.pl - Perl script to read FTN packets & output html files for the included messages
-  <dd><b>ftnplpkt</b> - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)
+  <dd><b>pkt2txt</b> - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages</dd>
+  <dd><b>pkt2html</b> - pkt2html.pl - Perl script to read FTN packets & output html files for the included messages</dd>
+  <dd><b>ftnplpkt</b> - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)</dd>
 
   <dt>Tick</dt>
-  <dd><b>ftnpltic</b> - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)
+  <dd><b>ftnpltic</b> - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)</dd>
 
   <dt>SRIF</dt>
-  <dd><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.
+  <dd><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.</dd>
   
   <dt>Utilities</dt>
-  <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellaneous FTN utility routines.  (to be developed)
+  <dd><b>ftnplutl</b> - FTN::Utility - Perl module for miscellaneous FTN utility routines.  (to be developed)</dd>
 
   <dt>BBS</dt>
-  <dd><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  
+  <dd><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  </dd>
   
   <dt>BBBS</dt>
-  <dd><b>mrtgbbbs</b> - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.
-  <dd><b>descadd</b> - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.
-  <dd><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.
-  <dd><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.
+  <dd><b>mrtgbbbs</b> - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.</dd>
+  <dd><b>descadd</b> - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.</dd>
+  <dd><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.</dd>
+  <dd><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.</dd>
 
   <dt>Husky Project</dt>
-  <dd><b>hpt2sql</b> - Perl scripts for using an SQL database with a Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.
+  <dd><b>hpt2sql</b> - Perl scripts for using an SQL database with a Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.</dd>
   
   <dt><a href="http://maximus.sourceforge.net">Maximus </a></dt> BBS
-  <dd><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)
+  <dd><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)</dd>
   
 </dl>
 
@@ -86,6 +87,8 @@ that can use or are already using Perl scripts.</p>
  <dt>Fidogate (<A href="http://www.fidogate.org"> www.fidogate.org</A>)</dt>
   <dd>This is a Fidonet - Internet gateway application.</dd>
   <dd>Has an extensive set of Perl scripts associated with it.</dd>
+  <dd>Fidogate (<A href="http://fidogate.sf.net"> fidogate.sf.net</A>) project at SourceForge</dd>
+  <dd>A Russian version of the Fidogate (<A href="http://rusfidogate.sf.net"> rusfidogate.sf.net</A>) project at SourceForge</dd>
   
  <dt>HPT (<A href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)</dt>
   <dd>Highly Portable Tosser;  part of the <A href="http://husky.sourceforge.net"> Husky </A>project.</dd>
